# telegram-bot1

./: .env  docker-compose.yml
ansible/: inventory.ini  playbook.yml
bot/: Dockerfile  bot.py  pyproject.toml  requirements.txt
django_project/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
django_project/django_project/: settings.py  urls.py
django_project/verified/: admin.py  models.py  serializers.py  views.py
